# MajuMapan

btc-sniper/: Cargo.toml
btc-sniper/src/: backtest.rs  indicators.rs  lib.rs  main.rs  perf_tests.rs  pipeline.rs  ring_buffer.rs  signal_engine.rs  strategy.rs  types.rs
ultra-sniper/: Cargo.toml
ultra-sniper/src/: lib.rs  main.rs
ultra-sniper/src/allocator/: mod.rs
ultra-sniper/src/data/: aggregator.rs  binance_ws.rs  candle.rs  mod.rs  polymarket_ws.rs  ring_buffer.rs
ultra-sniper/src/decision/: mod.rs
ultra-sniper/src/ev/: mod.rs
ultra-sniper/src/execution/: mod.rs
ultra-sniper/src/features/: atr.rs  ema.rs  mod.rs  rsi.rs
ultra-sniper/src/feed/: binance.rs  mod.rs  polymarket.rs
ultra-sniper/src/ml/: mod.rs
ultra-sniper/src/paper_trade/: mod.rs
ultra-sniper/src/portfolio/: mod.rs
ultra-sniper/src/regime/: mod.rs
ultra-sniper/src/risk/: mod.rs
ultra-sniper/src/runner/: mod.rs
ultra-sniper/src/simulation/: fill_logic.rs  mod.rs  mode.rs  orderbook.rs  paper_engine.rs  perf.rs  trade_logger.rs
ultra-sniper/src/strategy/: mod.rs
