[package]
name = "ultra_sniper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ultra_sniper"
path = "src/main.rs"

[lib]
name = "ultra_sniper"
path = "src/lib.rs"

[dependencies]
reqwest      = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
